test/tests/errors/error-file-cannot-assign.sm
// true
// false
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    var x: int = 1;
    x = f;
}